<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_detail">Meal Detail</string>
    <string name="meal_image">Meal Image</string>
    <string name="down_arrow">Down arrow</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
</resources>