<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/back"
            app:title="@string/meal_detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mealImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/meal_image"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/mealTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textStyle="bold"
                    tools:text="Meal Title" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardBackgroundColor="?attr/colorPrimaryContainer"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/mealSummaryTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBodyMedium"
                        android:padding="16dp"
                        tools:text="Meal Summary" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ingredientsCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/ingredientsArrow"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/down_arrow"
                            android:src="@drawable/ic_arrow_down"
                            android:visibility="visible"
                            tools:srcCompat="@tools:sample/avatars" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/ingredients"
                            android:textStyle="bold"
                            android:textAppearance="?attr/textAppearanceBodyLarge" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ingredientsList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="32dp"
                        android:visibility="gone" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/instructionsCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/instructionsArrow"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:contentDescription="@string/down_arrow"
                            android:src="@drawable/ic_arrow_down"
                            android:visibility="visible"
                            tools:srcCompat="@tools:sample/avatars" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/instructions"
                            android:textStyle="bold"
                            tools:text="Instructions"
                            android:textAppearance="?attr/textAppearanceBodyLarge" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/instructionsList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="32dp"
                        android:visibility="gone" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
